fix(Ui): :bug: Resolves z-index issue in modals

--- a/src/scss/site/_authForm.scss
+++ b/src/scss/site/_authForm.scss
@@ -15,6 +15,7 @@
 	}
 
 	&__overlay {
+		z-index: 2;
 		position: fixed;
 		top: 0;
 		left: 0;
